--- a/main.tex
+++ b/main.tex
@@ -81,9 +81,11 @@
 \newtheorem{cor}[thm]{Corollary}
 \newtheorem{lemma}[thm]{Lemma}
 \newtheorem{claim}{Claim}
+
 \theoremstyle{definition}
 \newtheorem{defi}[thm]{Definition}
 \newtheorem{axiom}{Axiom}
+
 \theoremstyle{remark}
 \newtheorem{rmk}[thm]{Remark}
 \newtheorem{ex}[thm]{Example}
@@ -122,11 +124,11 @@ It holds the following theorem, proved by D. Christodoulou and S.T. Yau:
         m_{\mathrm{Haw}}(\Sigma) \coloneq \sqrt{\frac{|\Sigma|}{16\pi}}\left( 1 - \frac{1}{16\pi}\int_\Sigma H^2 \dif \sigma \right) \ge 0.
     \]
 \end{thm}
-The importance of this result is due to a theorem of Huisken and Yau \cite{HuiskenYau_CenterMass}: every asymptotically flat\footnote{A complete 3-manifold \((M,g)\) is \emph{asymptotically flat} if there is a compact subset \(K \subset M\), a positive number \(R>0\) and a diffeomorphism \(\vp \colon \R^3 \setminus B_R(0) \to M\setminus K\) such that if \(g_{ij} \dif x^i\dif x^j = \vp^*g\) on \(\R^3\setminus B_R(0)\), then
+The importance of this result is due to a theorem of Huisken and Yau \cite{HuiskenYau_CenterMass}: every asymptotically flat\footnote{A complete 3-manifold \((M,g)\) is \emph{asymptotically flat} (AF in short) if there are a compact subset \(K \subset M\), a positive number \(R>0\) and a diffeomorphism \(\vp \colon \R^3 \setminus B_R(0) \to M\setminus K\) such that if \(g_{ij} \dif x^i\dif x^j = \vp^*g\) on \(\R^3\setminus B_R(0)\), then
 \[
     g_{ij}= \left(1+ \frac{2m}{r} \right) \delta_{ij} + O(r^{-2}).
 \]
-The charts like \((M\setminus K, \vp^{-1})\) are called \emph{AF charts}.} 3-manifold \((M,g)\) admits a foliation of the asymptotically flat end by CMC-stable 2-spheres \(\{\Sigma_r\}_{r>R}\). Then we could define a notion of total mass taking the limit of the Hawking mass of these CMC-stable 2-spheres when \(R \to +\infty\). Turns out that is coincide with the Arnowitt–Deser–Misner (ADM) mass\footnote{
+The charts like \((M\setminus K, \vp^{-1})\) are called \emph{asymptotically flat (AF) charts}.} 3-manifold \((M,g)\) admits a foliation of the asymptotically flat end by CMC-stable 2-spheres \(\{\Sigma_r\}_{r>R}\). Then we could define a notion of total mass taking the limit of the Hawking mass of these CMC-stable 2-spheres when \(R \to +\infty\). Turns out that this coincides with the Arnowitt–Deser–Misner (ADM) mass\footnote{
     Fix an AF chart \((M\setminus K, x^1,\dots, x^n)\). Then the ADM mass of \((M,g)\) is:
     \[
         m_{ADM}(M,g) \coloneq \frac{1}{2(n-1)|\Sp^{n-1}|}\lim_{r \to \infty} \int_{\{|x|=r\}} \left(\frac{\de g_{ij}}{\de x^i}- \frac{\de g_{ii}}{\de x^j} \right) \frac{x^i}{|x|} \ \dif \sigma_e,
@@ -142,7 +144,7 @@ Given this facts, as a corollary of Christodoulou-Yau theorem we get the positiv
     Let \((M^3,g)\) be an asymptotically flat Riemannian 3-manifold with non negative scalar curvature \(R_g \ge 0\). Then the ADM mass is non negative.
 \end{cor}
 
-In this note, we extend Theorem\ref{thm: Christodoulou-Yau} to orientable surfaces \(\Sigma\) of any genus. 
+In this note, we extend Theorem~\ref{thm: Christodoulou-Yau} to orientable surfaces \(\Sigma\) of any genus. 
 
 \begin{thm}\label{thm: Christodoulou-Yau for higher genus}
     Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC surface of genus \(k\). Then
@@ -185,11 +187,15 @@ Let us briefly state them here.
     \[
     \Phi \colon (\Sigma_1,g_1) \to (\Sigma_2,g_2)
     \] 
-    between oriented closed surfaces such that there is a finite set \(\Gamma\subset \Sigma_1\) (whose points are called \emph{branch points}) with finite image and 
-    \[
-    \Phi \colon (\Sigma_1\setminus\Gamma,g_1) \to (\Sigma_2\setminus \Phi(\Gamma),g_2)
-    \] 
-    is a conformal covering map.  
+    between oriented closed surfaces such that 
+    \begin{itemize}
+        \item there is a finite set \(\Gamma\subset \Sigma_1\) (whose points are called \emph{branch points}) with finite image \(\Phi(\Gamma)\) and
+        \item the restriction
+        \[
+        \Phi \colon (\Sigma_1\setminus\Gamma,g_1) \to (\Sigma_2\setminus \Phi(\Gamma),g_2)
+        \] 
+        is a conformal covering map.  
+    \end{itemize}
 \end{defi}
 
 The proof of Theorem~\ref{thm: corollary of Brill-Noether} is a consequence of the Brill-Noether Theorem~\ref{thm: Brill-Noether}, and it is postponed to the appendix of this note.
@@ -275,7 +281,11 @@ As an immediate consequence of Theorem~\ref{thm: Christodoulou-Yau for higher ge
             |\nabla_g v|^2_g = \lambda^{-2}|\nabla_{\Phi^*g_{\Sp^2}} v |^2_{\Phi^*g_{\Sp^2}}.
         \end{equation}
 
-        Let's prove \eqref{eq: Riemannian area element under conformal changes}. Fix some coordinates \((U,x^i)\) on \(\Sigma \setminus \Gamma\) and write \(g= g_{ij} \dif x^i \otimes \dif x^j\) and \(\Phi^*g_{\Sp^2} = \widetilde{g}_{ij}\dif x^i \otimes \dif x^j\). Then
+        Let's prove \eqref{eq: Riemannian area element under conformal changes}. Fix some coordinates \((U,x^i)\) on \(\Sigma \setminus \Gamma\) and write 
+        \[
+            g= g_{ij} \dif x^i \otimes \dif x^j, \qquad \Phi^*g_{\Sp^2} = \widetilde{g}_{ij}\dif x^i \otimes \dif x^j.
+        \]
+        Then,
         \[
             g_{ij} = \lambda^2 \widetilde{g}_{ij}.
         \]
@@ -324,11 +334,11 @@ As an immediate consequence of Theorem~\ref{thm: Christodoulou-Yau for higher ge
     \begin{align*}
         8\pi \deg(\Phi) &= \int_\Sigma \frac{1}{2}\left(|h^\circ|^2+R^M\right) + \frac{3}{4}H^2 -\frac{1}{2}R^\Sigma \ \dif \sigma.
     \end{align*}
-    By Gauss-Bonnet theorem
+    By Gauss-Bonnet theorem,
     \[
         \int_\Sigma \frac{R^\Sigma}{2} \ \dif \sigma = 2\pi \chi(\Sigma) = 2\pi(2-2k)= 4\pi-4k\pi.
     \]
-    Thus 
+    Thus,
     \begin{align*}
         \frac{1}{2}\int_\Sigma (|h^\circ|^2+R^M) \ \dif \sigma \le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|. 
     \end{align*}
@@ -367,7 +377,7 @@ Moreover, each \(\Sigma_t\) is stable, and in particular CMC-stable, so we can a
     \]
     i.e. \(k \ge -3\), which is also true.
 \end{itemize}
-However, if we require that \(R^M \ge 0\), then by \eqref{eq: R^M=R^S} \(R^\Sigma \ge 0\), so the Gauss-Bonnet theorem implies that either \(\Sigma\) is a sphere or \((\Sigma,g_\Sigma)\) is a flat torus.
+However, if we require that \(R^M \ge 0\), then, by \eqref{eq: R^M=R^S}, \(R^\Sigma \ge 0\), so the Gauss-Bonnet theorem implies that either \(\Sigma\) is a sphere or \((\Sigma,g_\Sigma)\) is a flat torus.
 
 
 Let us see an example of a family of CMC-unstable flat tori in a positively curved 3-manifold, namely the round 3-sphere \((\Sp^3,g_{\Sp^3})\). Consider the map 
@@ -378,17 +388,17 @@ defined by
 \[
     F(t,\theta,\phi) = (\cos t(\cos \theta, \sin \theta), \sin t(\cos \phi, \sin \phi)).
 \]
-For each \(t \in (0,\pi/2)\), \(F^t = F(t,\cdot,\cdot)\) is a smooth embedding of \(\Sp^1 \times \Sp^1\) in \(\Sp^3\) and a straightforward computation shows that
+For each \(t \in (0,\pi/2)\), \(F_t = F(t,\cdot,\cdot)\) is a smooth embedding of \(\Sp^1 \times \Sp^1\) in \(\Sp^3\) and a direct computation shows that
 \[
-    (F^t)^*g_{\Sp^3} = \cos^2 t \dif \theta \otimes \dif \theta + \sin^2 t \dif \phi \times \dif \phi.
+    (F_t)^*g_{\Sp^3} = \cos^2 t \ \dif \theta \otimes \dif \theta + \sin^2 t \ \dif \phi \otimes \dif \phi.
 \]
-In particular, \(\Sigma_t = F^t(\Sp^1\times \Sp^1)\) is a CMC flat torus in \((\Sp^3,g_{\Sp^3}\) with mean curvature
+In particular, \(\Sigma_t = F_t(\Sp^1\times \Sp^1)\) is a CMC flat torus in \((\Sp^3,g_{\Sp^3})\) with mean curvature
 \[
     H_t = \cot t - \tan t
 \]
 computed with respect to the unit normal
 \[
-    \nu_t\theta, \phi) = \frac{\de F}{\de t }(t, \theta, \phi) = (-\sin t(\cos \theta, \sin \theta), \cos t (\\cos \phi, \sin \phi)).
+    \nu_t(\theta, \phi) = \frac{\de F}{\de t }(t, \theta, \phi) = (-\sin t(\cos \theta, \sin \theta), \cos t (\\cos \phi, \sin \phi)).
 \]
 
 The square norm of the second fundamental form is 
@@ -402,26 +412,26 @@ so
 
 The area of \(\Sigma_t\) is
 \[
-    |\Sigma_t| = (2\pi\cos t)(2\pi \sin t) = 4\pi^2 \cos t \sin t.
+    |\Sigma_t| = (2\pi\cos t)(2\pi \sin t).
 \]
 
 Thus:
 \begin{align*}
     \frac{64\pi}{3} - H^2_t|\Sigma_t| &= \frac{64\pi}{3} - 4\pi^2 \cos t \sin t (\cot t - \tan t)^2\\
-    &= \frac{64\pi}{3} - 2\pi^2 \cos 2t (\cot t - \tan t)^2 \to -\infty
+    &= \frac{64\pi}{3} - 4\pi^2 \frac{(\cos^2 t - \sin^2 t)^2}{\cos t \sin t} \to -\infty
 \end{align*}
-as \(t \to 0\).
+as \(t \to 0\) and as \(t \to \pi/2\).
 
 On the other hand, 
 \[
-    \frac{2}{3}\int_{\Sigma_t} R^{\Sp^3} + |h_t^\circ|^2 \ \dif \sigma = \frac{16}{3} >0,
+    \frac{2}{3}\int_{\Sigma_t} R^{\Sp^3} + |h_t^\circ|^2 \ \dif \sigma = \frac{16}{3},
 \]
-so for some \(t \in (0,\pi/2)\)
+so for some \(t \in (0,\pi/2)\) close to \(0\) or to \(\pi/2\),
 \[
     \frac{64\pi}{3} - H^2_t|\Sigma_t| < \frac{2}{3}\int_{\Sigma_t} R^{\Sp^3} + |h_t^\circ|^2 \ \dif \sigma . 
 \]
 
-Indeed, it's not hard to prove that, for every \(t \in (0,\pi/2)\), \(\Sigma_t \subset (\Sp^3,g_{\Sp^3})\) is not CMC-stable. From the second variation formula, for any \(u \in C^\infty(\Sigma_t)\) and associated variation variation \(\Sigma_{t,s} = \{\exp_p(tu(p)\nu_t(p) \ \colon \ p \in \Sigma_t\}\)
+Actually, it's not hard to prove that, for every \(t \in (0,\pi/2)\), \(\Sigma_t \subset (\Sp^3,g_{\Sp^3})\) is not CMC-stable. From the second variation formula, for any \(u \in C^\infty(\Sigma_t)\) and associated variation variation \(\Sigma_{t,s} = \{\exp_p(tu(p)\nu_t(p) \ \colon \ p \in \Sigma_t\}\),
 \begin{align*}
     \left(\frac{\dif^2}{\dif s^2}\right)_{s=0} |\Sigma_{t,s}| &= \int_{\Sigma_t} |\nabla_{\Sigma_t} u|^2 - (\Ric^{\Sp^3}(\nu_t,\nu_t) + |h_t|^2 - H_t^2)u^2 \ \dif \sigma_t 
     &= \int_{\Sigma_t} |\nabla_{\Sigma_t} u|^2 -4u^2 \ \dif \sigma_t\\
@@ -459,7 +469,7 @@ Thus \(\{ \re(\vp_{m,n}), \im(\vp_{m,n}) \ \colon m,n \in \Z\}\) are all the eig
 This proves that \(\Sigma_t\) is not CMC-stable for all \(t \in (0,\pi/2)\).
 
 
-In general, the existence of CMC-stable surfaces with positive genus is obstructed by the positivity of curvature.
+In general, the existence of CMC-stable surfaces with positive genus is obstructed by the assumption of positive curvature.
 \begin{prop}
     Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC surface of genus \(k\). Then
     \begin{itemize}
@@ -480,29 +490,23 @@ In general, the existence of CMC-stable surfaces with positive genus is obstruct
 		\end{cases}
     \end{equation}
 
-    Now we want to rearrange the right hand side of \eqref{eq: fund ineq} (called ‘‘Ross rearrangement trick''). Let \(E_1\) and \(E_2\) be the principal directions of \(\Sigma\) at \(p \in \Sigma\), namely an orthonormal basis of \(T_p\Sigma\) that diagonalizes the second fundamental form. Then using the Gauss equation,
+    Now we want to rearrange the right hand side of \eqref{eq: fund ineq} (called ‘‘Ross rearrangement trick''). Let \(E_1\) and \(E_2\) be the principal directions of \(\Sigma\) at \(p \in \Sigma\), namely an orthonormal basis of \(T_p\Sigma\) that diagonalizes the second fundamental form. Then, using the Gauss equation,
     \begin{align*}
-        |h|^2 &= h_{11}h_{22} = h_{11}h_{22} -h_{12}h_{12} = R^\Sigma_{1212} - R^M_{1212}  \\
-        &= R^\Sigma - R^M_{1212}.
+        R^M_{1212} &= R^\Sigma_{1212} - h_{11} h_{22} + h_{12} h_{12} = \frac{R^\Sigma}{2} - h_{11}h_{22}\\
+        &= \frac{R^\Sigma}{2} - \frac{1}{2}(h_{11} + h_{22})^2 + \frac{1}{2}(h_{11}^2 + h_{22}^2)\\
+        &= \frac{R^\Sigma}{2} - \frac{H^2}{2} + \frac{|h|^2}{2}
     \end{align*}
-    Writing \(E_3=\nu\) (thus forming an orthonormal basis at \(T_pM\)),
+    Writing \(E_3=\nu\) (thus forming an orthonormal basis at \(T_pM\)), since \(\Ric^M \ge 0\),
 	\begin{align*}
-		\Ric^M(\nu,\nu) + |h|^2 &= R_{1313} + R^\Sigma - R^M_{1212} \\
-		&= R_{1313}+R_{2323} + 2 R_{1212} - R^\Sigma \\
-		&= \Ric^M(E_1,E_1) + \Ric^M(E_2,E_2) - R^\Sigma
+		\Ric^M(\nu,\nu) + |h|^2 &= R^M_{1313} + R^M_{2323} + 2R^M_{1212} - R^\Sigma +H^2 \\
+		&= \Ric^M(E_1,E_1) + \Ric^M(E_2,E_2) - R^\Sigma + H^2 \\
+        & \ge -2R^\Sigma
 	\end{align*}
-	Thus
+	Thus, by \eqref{eq: fund ineq}
 	\begin{equation}\label{eq: result of Ros rearrangement trick}
-		8\pi d \ge \int_\Sigma(\Ric^M(E_1,E_1) + \Ric^M(E_2,E_2)) \ \dif \sigma + 2\int_\Sigma \frac{R^\Sigma}{2} \ \dif \sigma.
+		8\pi d \ge - \int_\Sigma R^\Sigma \ \dif \sigma = -4\pi \chi(\Sigma) = 8\pi(k-1)
 	\end{equation}
-	Since \(\Ric^M>0\),
-	\begin{equation*}
-		-\int_\Sigma \frac{R^\Sigma}{2} \ \dif \sigma  \le 4\pi d.
-	\end{equation*}
-	and by Gauss-Bonnet Theorem,
-	\begin{equation}
-		4\pi (k-1) = -2\pi\chi(\Sigma)\le 4\pi d.
-	\end{equation}
+	by Gauss-Bonnet Theorem.
 	Then we have a linear inequality on \(k\):
 	\[
 		k-1 \le d(k) = \begin{cases}
@@ -525,7 +529,7 @@ In general, the existence of CMC-stable surfaces with positive genus is obstruct
 \section{Hersch's balancing trick}\label{sec: Hersch's trick}
 In this section, we give the proof of Hersch's trick. Let us point out that, with essentially the same proof, one can prove also the following enhanced version of Hersch's trick.
 
-\begin{lemma}
+\begin{lemma}\label{lem: Hersch trick +}
 	Let \(\Sigma^2 \subset (M^3,g)\) be a closed oriented surface, \(\vp \in C^\infty(\Sigma)\) a positive function and \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\) any map. Then there exists a conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\) such that 
 	\begin{equation}\label{eq: x_i orthogonal to phi_1}
 		\int_\Sigma (x^i \circ \gamma \circ \Phi) \vp \ \dif \sigma = 0
@@ -533,7 +537,7 @@ In this section, we give the proof of Hersch's trick. Let us point out that, wit
 	for each \(i=1,2,3\), where \(x^i\) is the restriction to \(\Sp^2 \subset \R^3\) of the \(i\)-th coordinate of \(\R^3\).
 \end{lemma}
 
-This extended version can be useful when dealing with index 1 minimal surfaces. Indeed recall that if \(\Sigma^2 \subset (M^3,g)\) is a closed two-sided minimal surface with unit normal \(\nu\), then its second variation is
+This extended version can be useful when dealing with minimal surfaces of index 1. Indeed recall that if \(\Sigma^2 \subset (M^3,g)\) is a closed two-sided minimal surface with unit normal \(\nu\), then its second variation is
 \begin{align*}
     \left(\frac{\dif^2}{\dif t^2}\right)_{t=0} |\Sigma_t| &= \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma \\
     &= -\int_\Sigma uL_\Sigma u \ \dif \sigma
@@ -546,24 +550,24 @@ is the \emph{Jacobi operator}. The \emph{Morse index} of a minimal surface is th
 \[
         \min_{u \in C^\infty(M)\setminus\{0\}}\frac{ \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma}{\int_\Sigma u^2\dif \sigma}.
 \]
-It is well known that \(\vp_1\) is uniquely defined up to a sign and it never vanishes, so let's say that it is positive. Recall that the second eigenvalue is characterized as
+It is well known that the first eigenvalue \(\lambda_1\) is simple (i.e. the associated eigenspace is 1-dimensional) and that the corresponding eigenfunctions never vanish, so we may assume that \(\vp_1>0\). Recall that the second eigenvalue is characterized as
 \[
     \lambda_2 = \inf\left\{\frac{ \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma}{\int_\Sigma u^2\dif \sigma} \ \colon \ \int_\Sigma u \vp_1 \ \dif \sigma = 0 \right\}.
 \]
 Thus if \(\Sigma\) has Morse index 1, then \(\lambda_2 \ge 0\), so we have the inequality
-\begin{equation*}
+\begin{equation}\label{eq: eigenvalue ineq}
     \int_\Sigma |\nabla_\Sigma u|^2 \ \dif \sigma \ge \int_\Sigma (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma
-\end{equation*}
+\end{equation}
 for any \(u \in C^\infty(M)\) such that \(\int_\Sigma u \vp_1 \ \dif \sigma = 0\). 
-Then one can combine this inequality with Hersch's trick exactly as we did with the CMC-stability inequality. 
+In general, as for the CMC-stability inequality, we cannot test \eqref{eq: eigenvalue ineq} with constant functions. Then one can combine Theorem~\ref{thm: corollary of Brill-Noether} with Lemma~\ref{lem: Hersch trick +} to find test functions that ‘‘kill'' the gradient part of \eqref{eq: eigenvalue ineq}.
 
 
 \begin{proof}[Proof of Lemma~\ref{lem: Hersch trick}]
 Consider \(\mathrm{Conf}(\Sp^2,g_{\Sp^2})\) of conformal diffeomorphisms of the round sphere. Consider the map
 \[
-    \gamma\colon B^3 \to \mathrm{Conf}(\Sp^2,g_{\Sp^2})
+    \gamma\colon \B^3 \to \mathrm{Conf}(\Sp^2,g_{\Sp^2})
 \]
-defined as follows: \(\gamma_0\) is the identity, while for any other point \(a = r\theta \in B^3\), with \(r \in (0,1)\) and \(\theta\in \Sp^2\), \(\gamma_a\) is the dilation of \(\Sp^2\) fixing the opposite poles \(\theta\) and \(-\theta\) and dilating out from \(-\theta\) by a factor \((1-r)^{-1}\). More precisely, if we denote by \(\pi_{\theta} \colon \Sp^2\setminus\{\theta\} \to \R^2\) the stereographic projection from \(\theta\), then for each \(x \in \Sp^2\)
+defined as follows: \(\gamma_0\) is the identity, while for any other point \(a = r\theta \in \B^3\), with \(r \in (0,1)\) and \(\theta\in \Sp^2\), \(\gamma_a\) is the dilation of \(\Sp^2\) fixing the opposite poles \(\theta\) and \(-\theta\) and dilating out from \(-\theta\) by a factor \((1-r)^{-1}\). More precisely, if we denote by \(\pi_{\theta} \colon \Sp^2\setminus\{\theta\} \to \R^2\) the stereographic projection from \(\theta\), then for each \(x \in \Sp^2\)
 \begin{equation*}
     \gamma_a(x)=\begin{cases}
 		\pi_{\theta}^{-1}\left(\frac{1}{1-r}\pi_{\theta}(x) \right) &x\neq \theta \\
@@ -617,28 +621,29 @@ Observe that for each \(\theta \in \Sp^2\)
 for each \(x \in \Sp^2\).
 Now consider the map
 \begin{equation*}
-	\Psi \colon B^3 \to \R^3 
+	\Psi \colon \B^3 \to \R^3 
 \end{equation*}
 defined by 
 \begin{equation*}
-	\Psi(a) \coloneq \frac{1}{|\Sigma|}\int_\Sigma \gamma_a \circ \Phi \ \dif \sigma = \left( \frac{1}{|\Sigma|}\int_\Sigma x^i \circ \gamma_a \circ \Phi\ \dif \sigma \right)_{i=1,2,3} \qquad \forall a \in B^3
+	\Psi(a) \coloneq \frac{1}{|\Sigma|}\int_\Sigma \gamma_a \circ \Phi \ \dif \sigma = \left( \frac{1}{|\Sigma|}\int_\Sigma x^i \circ \gamma_a \circ \Phi\ \dif \sigma \right)_{i=1,2,3} \qquad \forall a \in \B^3
 \end{equation*}
 Clearly \(\Psi\) is a continuous function.
 
-We need to show that there exists \(a_0 \in B^3\) such that \(\Psi(a_0)=0\), because then \(\gamma_{a_0}\) is the required conformal diffeomorphism. By triangular inequality, \(\Psi(B^3) \subset \overline{B^3}\): for any \(a \in B^3\)
+We need to show that there exists \(a_0 \in \B^3\) such that \(\Psi(a_0)=0\), as \(\gamma_{a_0}\) would the required conformal diffeomorphism. By triangular inequality, for any \(a \in \B^3\)
 \begin{equation*}
-	\left| \frac{1}{|\Sigma|}\int_\Sigma \gamma_a \circ \Phi\ \dif \sigma \right| \le \frac{1}{|\Sigma|}\int_\Sigma |\gamma_a \circ \Phi| \dif \sigma  = 1.
+	\left| \frac{1}{|\Sigma|}\int_\Sigma \gamma_a \circ \Phi\ \dif \sigma \right| \le \frac{1}{|\Sigma|}\int_\Sigma |\gamma_a \circ \Phi| \dif \sigma  = 1,
 \end{equation*}
-By \eqref{eq: Hersch - key prop for extension to boundary}, for any \(\theta \in \Sp^2 = \de B^3\),
+so \(\Psi(\B^3) \subset \overline{\B^3}\).
+By \eqref{eq: Hersch - key prop for extension to boundary}, for any \(\theta \in \Sp^2 = \de \B^3\),
 \[
 	\lim_{a \to \theta} \frac{1}{|\Sigma|}\int_\Sigma \gamma_a \circ \Phi \ \dif \sigma =  \theta,
 \]
-so there exists a unique continuous extension \(\Psi \in C^0(\overline{B^3}, \overline{B^3})\) such that \(\Psi|_{\de B^3} = \Id_{B^3}\). 
-To prove that \(0 \in \Psi(B^3)\), we can argue as in the classical proof of Brouwer fixed point theorem. We know that there is no retraction of \(\overline{B^3}\) on its boundary \(\de B^3\) (for example, because the homology group \(H_2(\de B^3) \cong \Z\) cannot be isomorphic to any subgroup of \(H_2(\overline{B^3})=0\)). Suppose by contradiction that \(0 \notin \Psi(\overline{B^3})\). Then we can define a retraction \(r \colon \overline{B^3} \to \de B^3 \) of \(\overline{B^3}\) on its boundary as:
+so there exists a unique continuous extension \(\Psi \in C^0(\overline{\B^3}, \overline{\B^3})\) such that \(\Psi|_{\de \B^3} = \Id_{\B^3}\). 
+To prove that \(0 \in \Psi(\B^3)\), we can argue as in the classical proof of Brouwer fixed point theorem. We know that there is no retraction of \(\overline{\B^3}\) on its boundary \(\de \B^3\) (for example, because the homology group \(H_2(\de \B^3) \cong \Z\) cannot be isomorphic to any subgroup of \(H_2(\overline{\B^3})=0\)). Suppose by contradiction that \(0 \notin \Psi(\overline{\B^3})\). Then we can define a retraction \(r \colon \overline{\B^3} \to \de \B^3 \) of \(\overline{\B^3}\) on its boundary as:
 	\[
 		r(x) = \frac{\Psi(x)}{|\Psi(x)|},
 	\]
-a contradiction, so \(0 \in \Psi(\Sigma)\). This proves the lemma. \qedhere
+a contradiction. So \(0 \in \Psi(\B^3)\), and this proves the lemma. \qedhere
 \end{proof}
 
 \appendix
@@ -665,7 +670,7 @@ It holds the following deep theorem (see \cite[Chapter XXI]{ACGH_GeometryAlgebra
 \end{thm}
 
 \begin{proof}[Proof of Theorem~\ref{thm: corollary of Brill-Noether}]
-With the notation above, fix \(r=1\). Using the Brill-Noether Theorem, we can find the required map \(\Phi\) of degree \(d\) if and only if
+With the notation above, fix \(r=1\). Using Brill-Noether Theorem, we can find the required map \(\Phi\) of degree \(d\) if and only if
 \[
     0 \le \rho(d,1,k) = k-2(k-d+1) = 2d - (k+2),
 \]
